<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/ui_text"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/start_game"
        android:textSize="18sp"
        android:background="@color/button_color"
        android:textColor="@color/ui_text"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/continue_game"
        android:textSize="18sp"
        android:background="@color/button_color"
        android:textColor="@color/ui_text"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/controlsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/controls"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/ui_text"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/continueButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/controlsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_right\n@string/jump\n@string/time_power_cycle\n@string/activate_power"
        android:textSize="16sp"
        android:textColor="@color/ui_text"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/controlsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>